--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,74 @@
-/* .App {
-  text-align: center;
+/********************** GLOBAL STYLES ***********************/
+
+.App {
+  /* margin: -10px; */
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/********************** HEADER ***********************/
+
+#header-container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/********************** NAV ***********************/
+
+#mob-nav-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgb(50, 50, 50);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#mob-nav-content {
+  color: white;
+  padding: 10%;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+#mob-nav-content a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.3em;
+}
+
+.sub-nav {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 20px 20px;
+  font-size: 0.6em;
+  font-weight: 100;
+  line-height: 30px;
+}
+
+#mob-nav-content #mob-nav-bottom {
+  position: absolute;
+  bottom: 30px;
+  color: white;
+}
+
+
+/********************** LANDING PAGE ***********************/
+
+#landing-container {
+  width: 96vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+#landing-about img {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+
