--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,29 @@
 /********************** GLOBAL STYLES ***********************/
 
 .App {
-  /* margin: -10px; */
-  padding: 0;
+  /* padding: 10px 10px 0 10px; */
 }
+
+body {
+  margin: 0;
+}
+
+button {
+  color: blue;
+  background-color: rgba(65, 84, 255, 0.22);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 1em;
+}
+
+footer {
+  background-color: rgb(50, 50, 50);
+  color: white;
+  width: 100vw;
+  height: 100px;
+}
+
 
 /********************** HEADER ***********************/
 
@@ -12,6 +32,8 @@
   flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 /********************** NAV ***********************/
@@ -57,12 +79,13 @@
 /********************** LANDING PAGE ***********************/
 
 #landing-container {
-  width: 96vw;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  margin-bottom: 100px;
 }
 
 #landing-about img {
