--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,18 @@ footer {
   background-color: rgb(50, 50, 50);
   color: white;
   width: 100vw;
-  height: 100px;
+  height: 130px;
+}
+
+#f-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px 80px 0 80px;
+}
+
+#f-content img {
+  width: 40px;
 }
 
 
@@ -72,7 +83,12 @@ footer {
 #mob-nav-content #mob-nav-bottom {
   position: absolute;
   bottom: 30px;
+}
+
+#mob-nav-content #mob-nav-bottom h5 {
   color: white;
+  font-weight: 100;
+  font-size: 0.72em;
 }
 
 
