--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,22 +17,37 @@ button {
   font-size: 1em;
 }
 
+#landing-container,
+#about-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+
+
+/********************** FOOTER ***********************/
+
 footer {
   background-color: rgb(50, 50, 50);
   color: white;
   width: 100vw;
-  height: 130px;
+  height: 110px;
 }
 
 #f-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 80px 0 80px;
+  padding: 30px 90px 0 90px;
 }
 
 #f-content img {
-  width: 40px;
+  width: 35px;
 }
 
 
@@ -47,11 +62,28 @@ footer {
   margin-bottom: 20px;
 }
 
+/********************** BANNER ***********************/
+
+/* .banner {
+  display: flex;
+  flex-direction: column;
+} */
+
+.banner img{
+  width: 100vw;
+  height: 300px;
+}
+
+.banner h1 {
+  margin: -48% 0 50% 0;
+}
+
+
 /********************** NAV ***********************/
 
 #mob-nav-container {
   width: 100vw;
-  height: 100vh;
+  height: 102vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -94,15 +126,6 @@ footer {
 
 /********************** LANDING PAGE ***********************/
 
-#landing-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin-bottom: 100px;
-}
 
 #landing-about img {
   width: 130px;
@@ -111,3 +134,16 @@ footer {
 }
 
 
+/********************** ABOUT PAGE ***********************/
+
+#about-container .t-block img {
+  width: 100px;
+  height: 120px;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+/* #team-container .t-right{
+  columns: 2;
+  align-items: center;
+} */
