--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,12 +9,13 @@ body {
 }
 
 button {
-  color: blue;
-  background-color: rgba(65, 84, 255, 0.22);
+  background-color: rgb(0, 56, 168);
+  color: white;
   border: none;
-  border-radius: 10px;
-  padding: 10px;
-  font-size: 1em;
+  border-radius: 5px;
+  padding: 15px;
+  font-size: 0.9em;
+  width: 70%;
 }
 
 #landing-container,
